src/test/ui/missing/missing-items/m2.stderr
error[E0046]: not all trait items implemented, missing: `CONSTANT`, `Type`, `method`
  --> $DIR/m2.rs:9:1
   |
LL | impl m1::X for X {
   | ^^^^^^^^^^^^^^^^ missing `CONSTANT`, `Type`, `method` in implementation
   |
   = help: implement the missing item: `const CONSTANT: u32 = 42;`
   = help: implement the missing item: `type Type = Type;`
   = help: implement the missing item: `fn method(&self, _: std::string::String) -> <Self as m1::X>::Type { unimplemented!() }`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0046`.
